--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -28,7 +28,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="country.html">Country</a></li>
                 <li><a href="city.html">City</a></li>
-                <li><a href="connection.html">Connection</a></li> 
+                <li><a href="jsp/connection.jsp">Connection</a></li> 
             </ul>
         </div>
         <!--Annonce-->
