--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -6,6 +6,10 @@
        <meta charset='utf-8'/>
          
           <!--css style-->
+          <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous">
         <link rel="stylesheet" href="css/ui.css"/>
 
         <title>Erasmus </title>
@@ -46,7 +50,7 @@
             <div class="col-md-5">
                 <div class="col-md-6">
                     <div id="titre">
-                        <strong>Cities</strong>
+                        <strong><br>Cities</strong>
                     </div>
                     <p>
                         <br> You can find the city in which you will live in Erasmus as well as opinions of the party people out there.<br><br>
@@ -55,14 +59,14 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/city.jpg" width="200" height="150">
+                    <br><br><img src="img/city.jpg" width="200" height="150">
                 </div>
             </div>
             
             <div class="col-md-5">
                 <div class="col-md-6">
                     <div id="titre">
-                        <strong>Universities</strong>
+                        <strong><br>Universities</strong>
                     </div>
                     <p>
                         <br>You can find here the university you are going to study, you will also find a list of professors active in Erasmus.<br><br>
@@ -71,7 +75,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/university.jpg" width="200" height="150">
+                    <br><br><img src="img/university.jpg" width="200" height="150">
                 </div>
             </div>
             <div class="col-md-1"></div>
@@ -94,7 +98,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/accomodation.jpeg" width="200" height="150">
+                    <br><img src="img/accomodation.jpeg" width="200" height="150">
                 </div>
             </div>
             <div class="col-md-5">
@@ -109,7 +113,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/students.jpg" width="200" height="150">
+                    <br><img src="img/students.jpg" width="200" height="150">
                 </div>
             </div>
             <div class="col-md-1"></div>
@@ -132,7 +136,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/jobs.jpg" width="200" height="150">
+                    <br><img src="img/jobs.jpg" width="200" height="150">
                 </div>
             </div>
             <div class="col-md-5">
@@ -147,7 +151,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/aboutus.jpg" width="200" height="150">
+                    <br><img src="img/aboutus.jpg" width="200" height="150">
                 </div>
             </div>
             <div class="col-md-1"></div>
