--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -31,7 +31,7 @@
                 <!--Navbar-->
                 <ul class="nav_bar">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="country.html">Countries</a></li>
+                <li><a href="countries.html">Countries</a></li>
                 <li><a href="city.html">Cities</a></li>
                 <li><a href="jsp/connection.jsp">Connection</a></li> 
                 </ul>
