--- a/tomcat/webapps/erasmus/countries.html
+++ b/tomcat/webapps/erasmus/countries.html
@@ -1,30 +1,138 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<div class="navbar">
+		<ul>
+			<li><a class="active"  href="index.html">EraStud</a></li>
+			<li><a href="">Cities</a>
+				<ul>
+					<li><a href="#">Find your City</a></li>
+					<li><a href="#">City Ranking</a></li>
+					<li><a href="#">Experience Sharing</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Universities</a>
+				<ul>
+					<li><a href="#">Find your University</a></li>
+					<li><a href="#">University Ranking</a></li>
+					<li><a href="#">List of </a></li>
+				</ul>
+			</li>
+			<li><a href="#">Accomodation</a></li>
+			<li><a href="#">Student</a></li>
+			<li><a href="#">Jobs</a></li>
+			<li><a href="#">About EraStud</a></li>
+		</ul>
+	</div>
+
 	<style>
-		*{
-			box-sizing: border-box;
+		
+		body{
+			margin: 0px;
+			padding: 0px;
+			border: 0;
+			color : red;
+			background-color:grey;
+			width:auto;
+			font-size: 100%;
+			font: inherit;
+			vertical-align: baseline;
 		}
 
+		.navbar ul {
+ 			list-style: none;
+  			background-color: #383838;
+  			padding: 0;
+  			margin: 0; 
+  			border-bottom: 5px solid orange;
+		}
+
+		.navbar li {
+  			font-family: 'Oswald', sans-serif;
+  			font-size: 1.1em;
+  			line-height: 20px;
+  			text-align: center;
+  			position:relative;
+		}
+
+
+		.navbar a {
+			text-decoration: none;
+  			color: #fff;
+  			display: block;
+  			padding-left: 0px;  
+		}
+
+		.navbar a:hover {
+  			background-color: grey;
+		}
+
+		.navbar a.active {
+  			background-color: #aaa;
+  			color: #444;
+  			cursor: pointer; 
+		}
+
+		.navbar li li {
+  			font-size: 0.8em;
+		}
+
+		.navbar li {
+    		width: 150px;
+    		border-bottom: none;
+    		height: 50px;
+    		line-height: 50px;
+    		font-size: 18px;
+    		display: inline-block;
+   			margin-right: -4px;
+   			padding: 0px;
+  		}
+
+  		.navbar a {
+    		border-bottom: none;
+  		}
+
+  		.navbar > ul > li {
+    		text-align: center;
+  		}
+  		
+  		.navbar > ul > li > a {
+    	padding-left: 0;
+  		}
+
+  		.navbar li ul {
+    		position: absolute;
+    		display: none;
+    		width: inherit;
+			border-bottom:none;
+  		}
+
+  		.navbar li:hover ul {
+    		display: block;
+  		}
+
+  		.navbar li ul li {
+    		display: block;
+  		}
+
 		#myInput {
-			background-image: url('/css/searchicon.png');
 			background-position: 10px 12px;
-			background-repeat: no-repeat;
-			width: 100%;
+			width: 29%;
 			font-size: 16px;
-			padding: 12px 20px 12px 40px;
+			padding: 12px 20px 12px 45px;
 			border: 1px solid #ddd;
-			margin-bottom: 12px;
+			border-bottom: 10px;
 		}
 
 		#myUL {
 			list-style-type: none;
-			padding: 0;
+			padding: 0px;
 			margin: 0;
 		}
 
 		#myUL li a {
 			border: 1px solid #ddd;
+			width: 32%;
 			margin-top: -1px; /* Prevent double borders */
 			background-color: #f6f6f6;
 			padding: 12px;
@@ -38,13 +146,11 @@
 			background-color: #e2e2e2;
 			cursor: default;
 		}
-
-		#myUL li a:hover:not(.header) {
-			background-color: #eee;
-		}
 	</style>
 </head>
 <body>
+
+	<p> Description and information about the country you have selected </p>
 
 	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search your Country..">
 
