--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -7,10 +7,7 @@
          
           <!--css style-->
           <!-- pour les mettre l'un a cote de l'autre-->
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-            crossorigin="anonymous">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/ui.css"/>
 
         <title>Erasmus </title>
@@ -60,7 +57,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <br><br><img src="img/city.jpg" width="200" height="150">
+                    <br><br><img src="img/city.JPG" width="200" height="150">
                 </div>
             </div>
             
