--- a/tomcat/webapps/erasmus/countries.html
+++ b/tomcat/webapps/erasmus/countries.html
@@ -15,7 +15,6 @@
 				<ul>
 					<li><a href="#">Find your University</a></li>
 					<li><a href="#">University Ranking</a></li>
-					<li><a href="#">List of </a></li>
 				</ul>
 			</li>
 			<li><a href="#">Accomodation</a></li>
@@ -32,7 +31,7 @@
 			padding: 0px;
 			border: 0;
 			color : red;
-			background-color:grey;
+			background-color: white;
 			width:auto;
 			font-size: 100%;
 			font: inherit;
@@ -41,10 +40,10 @@
 
 		.navbar ul {
  			list-style: none;
-  			background-color: #383838;
+  			background-color: #f3f3f3;
   			padding: 0;
   			margin: 0; 
-  			border-bottom: 5px solid orange;
+  			border-bottom: 5px solid #739687;
 		}
 
 		.navbar li {
@@ -58,18 +57,18 @@
 
 		.navbar a {
 			text-decoration: none;
-  			color: #fff;
+  			color: #739687;
   			display: block;
   			padding-left: 0px;  
 		}
 
 		.navbar a:hover {
-  			background-color: grey;
+  			background-color: silver;
 		}
 
 		.navbar a.active {
   			background-color: #aaa;
-  			color: #444;
+  			color: #fff;
   			cursor: pointer; 
 		}
 
@@ -134,7 +133,7 @@
 			border: 1px solid #ddd;
 			width: 32%;
 			margin-top: -1px; /* Prevent double borders */
-			background-color: #f6f6f6;
+			background-color: #f0f0f0;
 			padding: 12px;
 			text-decoration: none;
 			font-size: 18px;
