--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -23,7 +23,7 @@
             <div class="toolbar">
                 <!--Logo-->
                 <div class="logo">
-                    <img src="img/erasmus.jpg"/>
+                    <img src="img/erasmus.png"/>
                 </div>
                 <!--Navbar-->
                 <ul class="nav_bar">
