--- a/tomcat/webapps/erasmus/cities.html
+++ b/tomcat/webapps/erasmus/cities.html
@@ -21,6 +21,10 @@
 			<li><a href="#">Student</a></li>
 			<li><a href="#">Jobs</a></li>
 			<li><a href="#">About EraStud</a></li>
+			<li><a href="#">Sign In/Up</a></li>
+
+
+
 		</ul>
 	</div>
 
@@ -151,31 +155,34 @@
 
 	<p> Description and information about the country you have selected </p>
 
-	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search your Country..">
+	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search your City..">
 
 	<ul id="myUL">
 		<li><a href="#" class="header">A</a></li>
-		<li><a href="#">Austria</a></li>
-		<li><a href="#">Andorra</a></li>
+		<li><a href="#">Amsterdam</a></li>
+		<li><a href="#">Athens</a></li>
 
 		<li><a href="#" class="header">B</a></li>
-		<li><a href="#">Belgium</a></li>
-		<li><a href="#">Bulgaria</a></li>
+		<li><a href="#">Barcelona</a></li>
+		<li><a href="#">Belfast</a></li>
+		<li><a href="#">Berlin</a></li>
 
 		<li><a href="#" class="header">C</a></li>
-		<li><a href="#">Croatia</a></li>
-		<li><a href="#">Czech Republic</a></li>
+		<li><a href="#">Cardiff</a></li>
+		<li><a href="#">Cologne</a></li>
+		<li><a href="#">Copenhagen</a></li>
 
 		<li><a href="#" class="header">D</a></li>
-		<li><a href="#">Denmark</a></li>
+		<li><a href="#">Dortmund</a></li>
+		<li><a href="#">Dublin</a></li>
+		<li><a href="#">Düsseldorf</a></li>
 
 		<li><a href="#" class="header">F</a></li>
-		<li><a href="#">Finland</a></li>
-		<li><a href="#">France</a></li>
+		<li><a href="#">Florence</a></li>
+		<li><a href="#">Frankfurt</a></li>
 
 		<li><a href="#" class="header">G</a></li>
-		<li><a href="#">Germany</a></li>
-		<li><a href="#">Greece</a></li>
+		<li><a href="#">Glasgow</a></li>
 
 		<script>
 			function myFunction() {
