--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -30,9 +30,9 @@
                 <div class="navbar">
                    <ul>
                    <li><a class="logo"  href="index.html"> <img src="img/erasmus.png"/></a></li>
-                    <li><a href="cities.html">Cities</a>
+                    <li><a href="jsp/city.jsp">Cities</a>
                         <ul>
-                            <li><a href="cities.html">Find your City</a></li>
+                            <li><a href="jsp/city.jsp">Find your City</a></li>
                             <li><a href="#">City Ranking</a></li>
                             <li><a href="#">Experience Sharing</a></li>
                         </ul>
