--- a/tomcat/webapps/erasmus/cities.html
+++ b/tomcat/webapps/erasmus/cities.html
@@ -8,7 +8,7 @@
 			<li><a class="active"  href="index.html">EraStud</a></li>
 			<li><a href="">Cities</a>
 				<ul>
-					<li><a href="#">Find your City</a></li>
+					<li><a href="jsp/city.jsp">Find your City</a></li>
 					<li><a href="#">City Ranking</a></li>
 					<li><a href="#">Experience Sharing</a></li>
 				</ul>
