--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -33,7 +33,7 @@
                     <li><a href="jsp/city.jsp">Cities</a>
                         <ul>
                             <li><a href="jsp/city.jsp">Find your City</a></li>
-                            <li><a href="#">City Ranking</a></li>
+                            <li><a href="jsp/citiesrc.jsp">City Ranking</a></li>
                         </ul>
                     </li>
                     <li><a href="jsp/university.jsp">Universities</a>
