--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -39,8 +39,8 @@
                     <li><a href="jsp/university.jsp">Universities</a>
                     <li><a href="https://www.booking.com/index.fr.html?aid=397594;label=gog235jc-index-XX-XX-XX-unspec-lt-com-L%3Afr-O%3AwindowsS10-B%3Afirefox-N%3AXX-S%3Abo-U%3AXX-H%3As;sid=f852e761b1b63eceb745402b76efadce;sb_price_type=total&">Accomodation</a></li>
                     <li><a href="#">Student/Blog</a></li>
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#">About EraStud</a></li>
+                    <li><a href="jsp/job.jsp">Jobs</a></li>
+                    <li><a href="about.html">About EraStud</a></li>
                     <li><a href="jsp/connection.jsp">Sign In/Up</a></li>
 
 
