--- a/tomcat/webapps/erasmus/index.html
+++ b/tomcat/webapps/erasmus/index.html
@@ -2,9 +2,6 @@
 <html lang="fr" xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-
-
-
   <!--Content-type-->
   <meta name='Content-Type' content='text/html'/>
   <meta charset='utf-8'/>
@@ -38,7 +35,7 @@
                     </li>
                     <li><a href="jsp/university.jsp">Universities</a>
                     <li><a href="https://www.booking.com/index.fr.html?aid=397594;label=gog235jc-index-XX-XX-XX-unspec-lt-com-L%3Afr-O%3AwindowsS10-B%3Afirefox-N%3AXX-S%3Abo-U%3AXX-H%3As;sid=f852e761b1b63eceb745402b76efadce;sb_price_type=total&">Accomodation</a></li>
-                    <li><a href="#">Student/Blog</a></li>
+                    <li><a href="jsp/studentblog.jsp">Student/Blog</a></li>
                     <li><a href="jsp/job.jsp">Jobs</a></li>
                     <li><a href="about.html">About EraStud</a></li>
                     <li><a href="jsp/connection.jsp">Sign In/Up</a></li>
