--- a/tomcat/webapps/erasmus/about.html
+++ b/tomcat/webapps/erasmus/about.html
@@ -1,1 +1,43 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/ui.css"/>
+
+  <div class="navbar">
+    <ul>
+      <li><a class="active"  href="index.html">EraStud</a></li>
+      <li><a href="jsp/city.jsp">Cities</a>
+        <ul>
+          <li><a href="jsp/city.jsp">Find your City</a></li>
+          <li><a href="jsp/citiesrc.jsp">City Ranking</a></li>
+        </ul>
+      </li>
+      <li><a href="jsp/university.jsp">Universities</a>
+      </li>
+      <li><a href="https://www.booking.com/index.fr.html?aid=376366;label=fr-51aYADzKCvHZ21Orv3nXsAS193330406601%3Apl%3Ata%3Ap1%3Ap21.279.000%3Aac%3Aap1t1%3Aneg%3Afi%3Atikwd-65526620%3Alp9062284%3Ali%3Adec%3Adm;sid=f852e761b1b63eceb745402b76efadce;keep_landing=1;redirected=1;source=country&gclid=CLOB5qyxnNQCFZQy0wodqosCIQ&">Accomodation</a></li>
+      <li><a href="jsp/studentblog.jsp">Student/Blog</a></li>
+      <li><a href="jsp/job.jsp">Jobs</a></li>
+      <li><a href="about.html">About EraStud</a></li>
+      <li><a href="jsp/connection.jsp">Sign In/Up</a></li>
+
+
+
+    </ul>
+  </div>
+</head>
+
+<body>
+<p>Hello, we are two french student and we developed EraStud for student in the context of a Erasmus Project.<br>
+This experience has been achievied at Vilnius in the University VGTU in Lithuania.<br>
+Indeed, we are in second years in computing in France and we had developed a project in Erasmus.<br>
+We stayed about three month in Lithuania and this idea of this project has been given by our trainee, a VGTU teacher in computer science.<br><br>
+Here is a picture from VGTU in Lithuania.</p>
+<img src="img/vgtu.jpg" style="height: 350px;width: 400px;"> 
+<br> If you have got some questions about this website or our project, you can contact us at : <br> alexandre.devassine@etudiant.univ-lille1.fr <br>
+or <br>
+cyril.gerard@etudiant.univ-lille1.fr
+<br> 
+</body>
+</html>
